# sample-grpc

./: .gitignore  README.md  bookstore.py  bookstore_client.py  docker-compose.yml  warehouse.py
certs/: ca.crt  ca.key  client.crt  client.csr  client.key  generate_cert.sh  server.crt  server.csr  server.key
cpp/: CMakeLists.txt  bookstore_client.cc  bookstore_interceptor.h  bookstore_server.cc  warehouse_client.cc  warehouse_client.h
dockerfiles/client/: Dockerfile
dockerfiles/store/: Dockerfile
dockerfiles/warehouse/: Dockerfile
protos/: bookstore.proto  common.proto  warehouse.proto
